Add updateOrderStatus